fix: increase messages container height for improved visibility

--- a/css/chat.css
+++ b/css/chat.css
@@ -285,7 +285,7 @@
     }
 
     .messages {
-        height: 550px;
+        height: 750px;
         padding: 15px;
     }
 
@@ -355,7 +355,7 @@
     }
 
     .messages {
-        height: 500px;
+        height: 750px;
         padding: 10px;
     }
 
@@ -450,7 +450,7 @@
     }
 
     .messages {
-        height: 450px;
+        height: 750px;
         padding: 8px;
     }
 
